# CubS

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/cubs/: spline.h
src/: spline.c  splinetest.c
